[gd_scene format=3 uid="uid://cbtd6ejojofhq"]

[ext_resource type="Script" uid="uid://cq6le3g7ghc3p" path="res://gui/pd2_stash/character_equip.gd" id="1_o8xj8"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ycdy4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2cqfq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yaehf"]

[sub_resource type="ButtonGroup" id="ButtonGroup_w48qg"]

[node name="CharEquip" type="PanelContainer" unique_id=219751203]
script = ExtResource("1_o8xj8")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1361300142]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=800101913]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=2068602561]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="LeftWeapon" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftSide" unique_id=67499591]
layout_mode = 2
size_flags_vertical = 8
localize_numeral_system = false
theme_override_constants/separation = 0

[node name="Swap" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon" unique_id=847184047]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Swap1" type="Button" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon/Swap" unique_id=1580925288]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_ycdy4")
text = "I"

[node name="Swap2" type="Button" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon/Swap" unique_id=1094232896]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_ycdy4")
text = "II"

[node name="LeftTab" type="TabContainer" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon" unique_id=2060332216]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="RightArm" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon/LeftTab" unique_id=1364012843]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_tab_index = 0

[node name="AltRightArm" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftSide/LeftWeapon/LeftTab" unique_id=1935879450]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_tab_index = 1

[node name="Gloves" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftSide" unique_id=1229708214]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 8

[node name="LeftRing" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=372802470]
layout_mode = 2

[node name="Spacer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftRing" unique_id=1376025103]
custom_minimum_size = Vector2(40, 204)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2cqfq")

[node name="LeftRing" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftRing" unique_id=573960780]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 8

[node name="Torso" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=439567609]
layout_mode = 2

[node name="Helmet" type="PanelContainer" parent="MarginContainer/HBoxContainer/Torso" unique_id=1651151688]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Chest" type="PanelContainer" parent="MarginContainer/HBoxContainer/Torso" unique_id=449015598]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Belt" type="PanelContainer" parent="MarginContainer/HBoxContainer/Torso" unique_id=850919605]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_vertical = 8

[node name="RightRing" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=113155809]
layout_mode = 2

[node name="Spacer" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightRing" unique_id=1580225802]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yaehf")

[node name="Amulet" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightRing" unique_id=1654510863]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 0

[node name="Spacer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightRing" unique_id=447162202]
custom_minimum_size = Vector2(40, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yaehf")

[node name="RightRing" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightRing" unique_id=1922185006]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 8

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1561130648]
layout_mode = 2
size_flags_vertical = 8

[node name="RightWeapon" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightSide" unique_id=969590415]
layout_mode = 2
size_flags_vertical = 8
localize_numeral_system = false
theme_override_constants/separation = 0

[node name="Swap" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon" unique_id=744905090]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Swap11" type="Button" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon/Swap" unique_id=1123802423]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_w48qg")
text = "I"

[node name="Swap22" type="Button" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon/Swap" unique_id=1088124976]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_w48qg")
text = "II"

[node name="RightTab" type="TabContainer" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon" unique_id=518910326]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="LeftArm" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon/RightTab" unique_id=1258773015]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_tab_index = 0

[node name="AltLeftArm" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightSide/RightWeapon/RightTab" unique_id=1511142057]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_tab_index = 1

[node name="Boots" type="PanelContainer" parent="MarginContainer/HBoxContainer/RightSide" unique_id=1917083616]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 8
